--- a/app/src/main/res/layout/activity_new_purchase.xml
+++ b/app/src/main/res/layout/activity_new_purchase.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_list"
     android:orientation="vertical"
-    tools:context=".view.newpurchase.NewPurchaseActivity">
+    tools:context=".view.newpurchasescreen.NewPurchaseActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/load_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -17,9 +17,7 @@
         android:layout_centerHorizontal="true"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_action_add_white"
-        tools:ignore="VectorDrawableCompat"
-        app:civ_border_color="@color/colorWhite"
-        app:civ_border_width="1dp"/>
+        tools:ignore="VectorDrawableCompat"/>
 
     <EditText
         android:id="@+id/description"
