--- a/app/src/main/res/layout/recycler_view_purchases.xml
+++ b/app/src/main/res/layout/recycler_view_purchases.xml
@@ -13,8 +13,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/image"
+        <ImageView
+            android:id="@+id/purchases_image"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="4dp"
@@ -39,25 +39,31 @@
                 android:layout_height="120dp">
 
                 <TextView
-                    android:id="@+id/description"
+                    android:id="@+id/purchases_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:textSize="16sp"
-                    android:text="dssdfsdfsdfffffsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"/>
+                    android:textSize="16sp" />
 
             </android.support.v4.widget.NestedScrollView>
 
             <CheckBox
-                android:id="@+id/checkbox"
+                android:id="@+id/purchases_checkbox"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"/>
 
         </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/purchases_price"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:textSize="14sp"/>
 
     </LinearLayout>
 
