--- a/app/src/main/res/layout/fragment_completed_purchases.xml
+++ b/app/src/main/res/layout/fragment_completed_purchases.xml
@@ -5,6 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".view.mainscreen.CompletedPurchasesFragment">
 
+    <ProgressBar
+        android:id="@+id/load_from_db_progress_bar_completed_purchases"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/completed_purchases_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </FrameLayout>
