--- a/app/src/main/res/layout/fragment_purshases.xml
+++ b/app/src/main/res/layout/fragment_purshases.xml
@@ -3,8 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.mainscreen.PurchasesFragment">
+    tools:context=".view.mainscreen.CurrentPurchasesFragment">
 
+    <ProgressBar
+        android:id="@+id/load_from_db_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/purchases_recycler_view"
