--- a/app/src/main/res/layout/recycler_view_purchases.xml
+++ b/app/src/main/res/layout/recycler_view_purchases.xml
@@ -2,9 +2,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="16dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginEnd="16dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -16,8 +16,8 @@
             android:id="@+id/purchases_image"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="12dp"
             android:layout_marginBottom="8dp" />
 
         <View
@@ -35,21 +35,21 @@
             <TextView
                 android:id="@+id/purchases_description"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="50dp"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="1"
                 android:textSize="16sp" />
 
             <CheckBox
                 android:id="@+id/purchases_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_gravity="end"/>
+                android:layout_marginEnd="8dp" />
 
         </LinearLayout>
 
